--- a/PythnD1240223.ipynb
+++ b/PythnD1240223.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO97wSFESMc/66/gkO44ILQ",
+      "authorship_tag": "ABX9TyNIh8YjYV0mP1LPp5YJkr35",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -261,9 +261,72 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "64**2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7vq7hDYfTlPV",
+        "outputId": "0b2ddf0f-f866-4312-b1bc-5a958100276a"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4096"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math"
+      ],
+      "metadata": {
+        "id": "PGtOsASfbLcM"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "math.sqrt (64)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZWhYZnR8bX_H",
+        "outputId": "15473142-5d99-4315-b039-b8106d9d937e"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "7vq7hDYfTlPV"
+        "id": "pfiI75Zybfsx"
       },
       "execution_count": null,
       "outputs": []
