--- a/Multiple_Linear_Regression__Feb_20.ipynb
+++ b/Multiple_Linear_Regression__Feb_20.ipynb
@@ -39,8 +39,7 @@
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
-        "import matplotlib.pyplot as plt\n",
-        "#test save"
+        "import matplotlib.pyplot as plt\n"
       ],
       "metadata": {
         "id": "p_Q6mkQPKRYY"
@@ -778,75 +777,30 @@
     {
       "cell_type": "code",
       "source": [
+        "#0.0 and 1.0 are states NY and California Index#0,1\n",
+        "#subsequent are R&D, Admin, Marketing-Index#2,3,4\n",
         "X"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 200
         },
         "id": "9DWrpIxxNAKA",
-        "outputId": "0574808e-e03d-46b0-f27a-cd68c8914c93"
+        "outputId": "36fa2eee-42e7-40f5-d752-fe3180a57184"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[0.0, 1.0, 165349.2, 136897.8, 471784.1],\n",
-              "       [0.0, 0.0, 162597.7, 151377.59, 443898.53],\n",
-              "       [1.0, 0.0, 153441.51, 101145.55, 407934.54],\n",
-              "       [0.0, 1.0, 144372.41, 118671.85, 383199.62],\n",
-              "       [1.0, 0.0, 142107.34, 91391.77, 366168.42],\n",
-              "       [0.0, 1.0, 131876.9, 99814.71, 362861.36],\n",
-              "       [0.0, 0.0, 134615.46, 147198.87, 127716.82],\n",
-              "       [1.0, 0.0, 130298.13, 145530.06, 323876.68],\n",
-              "       [0.0, 1.0, 120542.52, 148718.95, 311613.29],\n",
-              "       [0.0, 0.0, 123334.88, 108679.17, 304981.62],\n",
-              "       [1.0, 0.0, 101913.08, 110594.11, 229160.95],\n",
-              "       [0.0, 0.0, 100671.96, 91790.61, 249744.55],\n",
-              "       [1.0, 0.0, 93863.75, 127320.38, 249839.44],\n",
-              "       [0.0, 0.0, 91992.39, 135495.07, 252664.93],\n",
-              "       [1.0, 0.0, 119943.24, 156547.42, 256512.92],\n",
-              "       [0.0, 1.0, 114523.61, 122616.84, 261776.23],\n",
-              "       [0.0, 0.0, 78013.11, 121597.55, 264346.06],\n",
-              "       [0.0, 1.0, 94657.16, 145077.58, 282574.31],\n",
-              "       [1.0, 0.0, 91749.16, 114175.79, 294919.57],\n",
-              "       [0.0, 1.0, 86419.7, 153514.11, 0.0],\n",
-              "       [0.0, 0.0, 76253.86, 113867.3, 298664.47],\n",
-              "       [0.0, 1.0, 78389.47, 153773.43, 299737.29],\n",
-              "       [1.0, 0.0, 73994.56, 122782.75, 303319.26],\n",
-              "       [1.0, 0.0, 67532.53, 105751.03, 304768.73],\n",
-              "       [0.0, 1.0, 77044.01, 99281.34, 140574.81],\n",
-              "       [0.0, 0.0, 64664.71, 139553.16, 137962.62],\n",
-              "       [1.0, 0.0, 75328.87, 144135.98, 134050.07],\n",
-              "       [0.0, 1.0, 72107.6, 127864.55, 353183.81],\n",
-              "       [1.0, 0.0, 66051.52, 182645.56, 118148.2],\n",
-              "       [0.0, 1.0, 65605.48, 153032.06, 107138.38],\n",
-              "       [1.0, 0.0, 61994.48, 115641.28, 91131.24],\n",
-              "       [0.0, 1.0, 61136.38, 152701.92, 88218.23],\n",
-              "       [0.0, 0.0, 63408.86, 129219.61, 46085.25],\n",
-              "       [1.0, 0.0, 55493.95, 103057.49, 214634.81],\n",
-              "       [0.0, 0.0, 46426.07, 157693.92, 210797.67],\n",
-              "       [0.0, 1.0, 46014.02, 85047.44, 205517.64],\n",
-              "       [1.0, 0.0, 28663.76, 127056.21, 201126.82],\n",
-              "       [0.0, 0.0, 44069.95, 51283.14, 197029.42],\n",
-              "       [0.0, 1.0, 20229.59, 65947.93, 185265.1],\n",
-              "       [0.0, 0.0, 38558.51, 82982.09, 174999.3],\n",
-              "       [0.0, 0.0, 28754.33, 118546.05, 172795.67],\n",
-              "       [1.0, 0.0, 27892.92, 84710.77, 164470.71],\n",
-              "       [0.0, 0.0, 23640.93, 96189.63, 148001.11],\n",
-              "       [0.0, 1.0, 15505.73, 127382.3, 35534.17],\n",
-              "       [0.0, 0.0, 22177.74, 154806.14, 28334.72],\n",
-              "       [0.0, 1.0, 1000.23, 124153.04, 1903.93],\n",
-              "       [1.0, 0.0, 1315.46, 115816.21, 297114.46],\n",
-              "       [0.0, 0.0, 0.0, 135426.92, 0.0],\n",
-              "       [0.0, 1.0, 542.05, 51743.15, 0.0],\n",
-              "       [0.0, 0.0, 0.0, 116983.8, 45173.06]], dtype=object)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 48
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-1779aa52edfa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#0.0 and 1.0 are states NY and California Index#0,1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#subsequent are R&D, Admin, Marketing-Index#2,3,4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mX\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
+          ]
         }
       ]
     },
@@ -1143,6 +1097,7 @@
       "cell_type": "code",
       "source": [
         "#Measuring Accuracy\n",
+        "#mape should be <50 and rsquare should be >50. Then model can be considered as accurate. More accuracy is measured by mape closer to 0and rsquare closer to 1\n",
         "from sklearn.metrics import mean_absolute_percentage_error, r2_score\n",
         "\n",
         "mape = mean_absolute_percentage_error(y_true=y_test,y_pred=y_pred)\n",
@@ -1183,6 +1138,10 @@
       "cell_type": "code",
       "source": [
         "#Building Optimal model\n",
+        "#1 is constant (Index #0)\n",
+        "#0.0 and 1.0 are states NY and California Index#1,2\n",
+        "#subsequent are R&D, Admin, Marketing-Index#3,4,5\n",
+        "#there is an equation fr MLR to satisfy it in statsmodel we need to add 1 as a constant value b0 is not valid in statsmodel. chck slide27.\n",
         "import statsmodels.api as sm\n",
         "X = np.append(arr =np.ones((50,1)).astype(int),values =X,axis=1)"
       ],
@@ -1270,7 +1229,11 @@
     {
       "cell_type": "code",
       "source": [
-        "#Backward Elimination\n",
+        "#Backward Elimination:\n",
+        "#only once we did backward elimination we undertand that States have no impact on the Profit. \n",
+        "#We need to identify the variable with high p-value and chck if p>alpha (we will go with H0), \n",
+        "#we need to keep checking and discarding the variables one after the other  untill p<alpha\n",
+        "#as we want to try to reject H0.\n",
         "X_opt = X[:, [0,1,2,3,4,5]]\n",
         "X_opt = np.array(X_opt, dtype=float)\n",
         "regressor_OLS = sm.OLS(endog=y, exog=X_opt).fit()\n",
@@ -1403,6 +1366,10 @@
     {
       "cell_type": "code",
       "source": [
+        "#from abv, X2 is the highest p-value, hence removing, the 0th X(X0 is constant)\n",
+        "#there are other X's which have high p-value but we cannot remove all at once , \n",
+        "#coz only if we remove one at a time we will underatnd how the impact is\n",
+        "#on the dataset post discarding a particular variable.\n",
         "X_opt = X[:, [0,1,3,4,5]]\n",
         "X_opt = np.array(X_opt, dtype=float)\n",
         "regressor_OLS = sm.OLS(endog=y, exog=X_opt).fit()\n",
@@ -1531,6 +1498,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#In abv X1 is highest compared to others, hence remove X1\n",
         "X_opt = X[:, [0,3,4,5]]\n",
         "X_opt = np.array(X_opt, dtype=float)\n",
         "regressor_OLS = sm.OLS(endog=y, exog=X_opt).fit()\n",
@@ -1655,6 +1623,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#In abv, X2 is high from the current set X_opt = X[:, [0,3,4,5]], X0, X1, X2, X3 : X2 is 4 hcen remove 4\n",
         "X_opt = X[:, [0,3,5]]\n",
         "X_opt = np.array(X_opt, dtype=float)\n",
         "regressor_OLS = sm.OLS(endog=y, exog=X_opt).fit()\n",
@@ -1775,10 +1744,13 @@
     {
       "cell_type": "code",
       "source": [
+        "#in abv X2 is high ,X2 is 5 , remove\n",
         "X_opt = X[:, [0,3]]\n",
         "X_opt = np.array(X_opt, dtype=float)\n",
         "regressor_OLS = sm.OLS(endog=y, exog=X_opt).fit()\n",
-        "regressor_OLS.summary()"
+        "regressor_OLS.summary()\n",
+        "#the inference of this code is we get to know that 3 is the most impacting value for our profit.\n",
+        "#column with index 3 in the actual dataset post adding the states as 0 and 1, check X value post Encoding categorical Data-Index of data points is R&D"
       ],
       "metadata": {
         "colab": {
@@ -1900,6 +1872,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Here we are taking the entire dataset and doing the visualization with R&D and Profit values. \n",
+        "#we can have multiple variables impacting profit but we can use only one dependent and one independent var  one X nd one Y\n",
         "import seaborn as sns\n",
         "sns.lmplot(x=\"R&D Spend\", y=\"Profit\", data=dataset)"
       ],
