--- a/KMeans_Mar24.ipynb
+++ b/KMeans_Mar24.ipynb
@@ -26,8 +26,35 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Problem Statement:\n",
+        "\n",
+        "There is a huge mall that takes the information like their Age, Salary, Income when they subscribe to a membership card. The mall also came up with a \n",
+        "score \n",
+        "based on criteria like \n",
+        "number of time they show up, amount they spend in mall, income, ect. \n",
+        "The lesser the score, the lesser the decline in spending. Now, the mall has hired you as a data scientist to segregate the customers into segments based on the \n",
+        "Annual Income and Spending Score. \n",
+        "\n",
+        "The Mall has no idea what and how many segments there can be.\n",
+        "\n",
+        "Solution: Build a clustering model using K-Means to find out what those clusters of clients might be.\n",
+        "\n",
+        "Business Value Add: Helping them create a model based on this sample that will allow them to categorize the customer into right category based on the given parameters.\n",
+        "\n",
+        "DATASET:\n",
+        "This is a data set of a mall customers who is on social media\n",
+        "The dataset has 5 Columns\n",
+        "Number of observations are 200\n"
+      ],
+      "metadata": {
+        "id": "K581hh5Dbq7z"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "UfQZ_BJwUvMq"
       },
@@ -48,7 +75,7 @@
       "metadata": {
         "id": "PDdGfLijWml6"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -64,7 +91,7 @@
         "id": "TZHTRUjZYBdl",
         "outputId": "964844b1-afbc-4652-f3df-ffe50aec0b6e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +272,7 @@
         "id": "Es12IfvfYGxv",
         "outputId": "46b07996-4495-4ad6-b95b-9e100c6558c8"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +306,7 @@
         "id": "46uDydkLTmLy",
         "outputId": "d1dc850d-ca76-4056-c821-f5d21bbc38bf"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -311,7 +338,7 @@
         "id": "9dITGEMoYNOU",
         "outputId": "9369ba1e-5054-482e-b674-acdcf057f999"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -507,7 +534,7 @@
       "metadata": {
         "id": "Tan99zFlYc8h"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -518,7 +545,7 @@
       "metadata": {
         "id": "S1Xz0ZSjS6Ll"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -533,7 +560,7 @@
         "id": "MrWSJ-bpTFGL",
         "outputId": "ae5f4bc1-11d0-4e1d-acc1-8f33543d25e2"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -752,7 +779,7 @@
       "metadata": {
         "id": "xkalR8SwTF6X"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -763,7 +790,7 @@
       "metadata": {
         "id": "syl7DJLcuDEF"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -772,7 +799,7 @@
       "metadata": {
         "id": "y-qG2wbsS5Gl"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -799,7 +826,7 @@
         },
         "outputId": "bd60b64a-e041-4759-947f-88222ad8cd3b"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -825,7 +852,7 @@
       "metadata": {
         "id": "jhCQ3mPqXzT8"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -842,7 +869,7 @@
         "id": "vfy3c84mYoU5",
         "outputId": "fc022fd3-e8a6-47d5-b67d-98efe8a6a69b"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -890,7 +917,7 @@
         "id": "g8kj8IBkazS9",
         "outputId": "4d2b0c28-2e8d-48ba-f438-2176714a304e"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -931,7 +958,7 @@
         "id": "UbyPMVRVcstA",
         "outputId": "5f047e15-739c-4ca1-f874-92523c6ca2fa"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
