--- a/MLR_Corolla_ASG2.ipynb
+++ b/MLR_Corolla_ASG2.ipynb
@@ -855,7 +855,7 @@
         }
       ],
       "source": [
-        "#How do we select 2 variables? CC and Doors?\n",
+        "#How do we select 2 variables? \n",
         "ml_v=smf.ols('Price~Age_08_04',data = coro).fit()  \n",
         "#t and p-Values\n",
         "print(ml_v.tvalues, '\\n', ml_v.pvalues)  "
